# ros2_workspace

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  requirements_xavier.txt  setup_xavier.sh  start.sh  underlay.repos
RosBag/: README.md
RosBag/rosbag2_2000_01_01-01_46_46/: metadata.yaml
RosBag/rosbag2_2000_01_01-03_06_35/: metadata.yaml  rosbag2_2000_01_01-03_06_35_0.db3
docs/: 01_CONTEXTE_GLOBAL_ASUQTR.md  02_ARCHITECTURE_CONTROLE_LQR_SDRE.md  03_ARCHITECTURE_CODE_ROS2.md  04_DIAGNOSTIC_ET_PLAN_ACTION.md  ADDITIONAL_FILES_FOR_TUNING.md  CONTROL_DEPLOYMENT_WORKFLOW.md  README_COMPREHENSIVE.md  asuqtr_ros2_ar.drawio
env/desktop/: Dockerfile  start.sh
src/sub_autonomy/: CMakeLists.txt  README.md  package.xml
src/sub_autonomy/asuqtr_flexbe_behaviors/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.cfg  setup.py
src/sub_autonomy/asuqtr_flexbe_behaviors/asuqtr_flexbe_behaviors/: find_and_go_through_gate_sm.py  go_to_object_at_camera_size_sm.py
src/sub_autonomy/asuqtr_flexbe_behaviors/manifest/: example_action_state_behavior.xml  example_behavior.xml
src/sub_autonomy/asuqtr_flexbe_states/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
src/sub_autonomy/asuqtr_flexbe_states/asuqtr_flexbe_states/: cam_node_dx.py  check_valid_mfield_orientation.py  dropper_state.py  increment_pitch.py  increment_roll.py  increment_x.py  increment_z.py  object_detection.py  set_absolute_yaw.py
src/sub_autonomy/asuqtr_flexbe_states/tests/: example_action_state.test  example_state.test  run_colcon_test.py  run_tests.launch.py
src/sub_autonomy/sub_autonomy/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/sub_autonomy/sub_autonomy/camera_states/: CMakeLists.txt  package.xml  setup.py
src/sub_autonomy/sub_autonomy/camera_states/tests/: run_rostest.test  run_tests.launch
src/sub_autonomy/sub_autonomy/lqr_control_behaviors/: back_and_forth_sm.py  carrousel_sm.py  center_object_in_camera_middle_sm.py  pass_gate_variable_sm.py  turn_and_find_object_sm.py  turn_around_sm.py
src/sub_autonomy/sub_autonomy/lqr_control_states/: CMakeLists.txt
src/sub_autonomy/sub_autonomy/lqr_control_states/src/camera_states/: object_alignment.py
src/sub_autonomy/sub_autonomy/lqr_control_states/src/lqr_control_states/: example_action_state.py  example_state.py  increment_y.py  set_absolute_roll.py  time_x_forward_backward.py  time_y_right_left.py
src/sub_autonomy/sub_autonomy/lqr_control_states/src/miscellaneous_states/: get_new_and_old_mfield.py  mission_led_state.py  powerswitch_state.py  proxy_subscriber_example.py  simple_timer.py  torpedo_state.py
src/sub_autonomy/sub_autonomy/lqr_control_states/tests/: cam_center_person.test  cam_detect_person.test  increment_x_2_m.test  increment_y_2_m.test  increment_yaw_5_deg.test  run_tests.launch  set_absolute_roll_to_45.test  set_absolute_yaw_to_45.test  time_x_forward_backward_3s_30%.test  time_y_left_right_3s_30%.test
src/sub_autonomy/sub_autonomy/miscellaneous_states/: package.xml  setup.py
src/sub_control/: CMakeLists.txt  package.xml
src/sub_control/config/: params.yaml  robot_localization.yaml
src/sub_control/launch/: standalone.launch.yaml
src/sub_control/scripts/: control_node.py  lqr_tuning.py
src/sub_control/sub_control/: lqr_solver.py
src/sub_control/tools/: mock_odom.py  publish_body_position_cmd.sh
src/sub_hardware/: CMakeLists.txt  package.xml
src/sub_hardware/config/: params.yaml
src/sub_hardware/doc/: README_actuator_node.md  README_io_node.md  README_power_node.md
src/sub_hardware/launch/: dvl.launch.yaml  indicator.launch.yaml  power.launch.yaml  sensor.launch.yaml
src/sub_hardware/scripts/: actuator_node.py  dvl_node.py  sensor_node.py  sonar_node.py
src/sub_hardware/test/: ping_test.py
src/sub_hardware/tools/: imu_yaw_drift_measurement.py  install_dependencies.sh
src/sub_interfaces/: CMakeLists.txt  package.xml
src/sub_interfaces/action/: Control.action
src/sub_interfaces/srv/: sonar_scan.srv
src/sub_launch/: CMakeLists.txt
src/sub_launch/config/: log_level.conf  robot_localization.yaml
src/sub_launch/launch/: all.launch  autonomous.launch  hardware.launch.yaml  lqr_tuning.launch.yaml  no_actuators_jetson.launch  no_video.launch  pc.launch  sensors_n_control_node.launch  sub.launch.yaml  tunning.launch
src/sub_launch/urdf/: asuqtr_sub.urdf
src/sub_perception/: CMakeLists.txt  package.xml
workspace/: build.sh  pkg-cpp.sh
