<package>
  <name>camera_states</name>
  <version>1.0.0</version>
  <description>
     camera_states provides a collection of states to read camera msg from ASUQTR's AUV 
  </description>
  <maintainer email="thomas.germain@uqtr.ca">Thomas Germain</maintainer>
  <maintainer email="gabriel.tremblay@uqtr.ca">Gabriel Tremblay</maintainer>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>

  <run_depend>flexbe_core</run_depend>

  <export>
    <flexbe_states />
  </export>

</package>
