<package>
  <name>miscellaneous_states</name>
  <version>1.0.0</version>
  <description>
     miscellaneous_states provides a collection of states for non specific actions. This may use any sensor/actuator on the system that is not already the target of a state package
  </description>
  <maintainer email="gabriel.tremblay@uqtr.ca">Gabriel Tremblay</maintainer>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>

  <run_depend>flexbe_core</run_depend>

  <export>
    <flexbe_states />
  </export>

</package>
